@@ -2,6 +2,12 @@
 
 This module contains articles about Spring Mobile
 
+Run with
+
+```sh
+java --add-opens java.base/java.lang=ALL-UNNAMED -jar target/spring-mobile-1.0-SNAPSHOT.jar                      
+```
+
 ## Relevant articles:
 
 - [A Guide to Spring Mobile](https://www.baeldung.com/spring-mobile)
